--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <div id="img_">
-        <h1 id="rule">Hİ,</h1>
+        <h1 id="rule">HI,</h1>
         <h1>I'm Muhammet Cetinalp</h1>
         <h1>Web Developer</h1>
     </div>
     <div id="img_2">
         <i id="ikon_" class="fa-solid fa-laptop fa-2x"></i>
         <h3 style="color: rgb(240, 248, 255);">Muhammet</h3>
-        <h6 style="color: rgb(240, 248, 255);">Web Deweloper</h6>
+        <h6 style="color: rgb(240, 248, 255);">Web Developer</h6>
     </div>
     <br>
     <div id="img_3">
