--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
     <div id="img_3">
         <ul>
             <li><a href="http://127.0.0.1:5501/index.html"><i class="fa-solid fa-house"></i> Home</a></li>
-            <li><a href="https://github.com/muhammetcetinalp" target="_blank"><i class="fa-solid fa-address-card"></i> About</a></li>
-            <li><a href="https://github.com/muhammetcetinalp" target="_blank"><i class="fa-regular fa-newspaper"></i> My Skills</a></li>
-            <li><a href="https://twitter.com/Muhammetctnalp" target="_blank"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+            <li><a href="https://github.com/muhammetcetinalp" ><i class="fa-solid fa-address-card"></i> About</a></li>
+            <li><a href="https://github.com/muhammetcetinalp" ><i class="fa-regular fa-newspaper"></i> My Skills</a></li>
+            <li><a href="https://twitter.com/Muhammetctnalp" ><i class="fa-solid fa-address-book"></i> Contact</a></li>
         </ul>
     </div>
     <br>
     <div id="img_4">
-        <a href="https://twitter.com/Muhammetctnalp" target="_blank" class="padd"><i class="fa-brands fa-x-twitter fa-1x"></i></a>
-        <a href="https://www.instagram.com/muhammetcetinalpp/" target="_blank" class="padd"><i class="fa-brands fa-instagram fa-1x"></i></a>
-        <a href="https://www.linkedin.com/in/muhammet-çetinalp-279924223/" target="_blank" class="padd"><i class="fa-brands fa-linkedin-in fa-1x"></i></a>
-        <a href="https://github.com/muhammetcetinalp" target="_blank" class="padd"><i class="fa-brands fa-github fa-1x"></i></a>
+        <a href="https://twitter.com/Muhammetctnalp"  class="padd"><i class="fa-brands fa-x-twitter fa-1x"></i></a>
+        <a href="https://www.instagram.com/muhammetcetinalpp/"  class="padd"><i class="fa-brands fa-instagram fa-1x"></i></a>
+        <a href="https://www.linkedin.com/in/muhammet-çetinalp-279924223/"  class="padd"><i class="fa-brands fa-linkedin-in fa-1x"></i></a>
+        <a href="https://github.com/muhammetcetinalp"  class="padd"><i class="fa-brands fa-github fa-1x"></i></a>
     </div>
 
 
